examples/snapshots/overloading__compiler_examples@42.snap
---
source: src/main.rs
expression: output
input_file: examples/42.over
---
{
  "status": "success",
  "expression": "42",
  "dimension_spans": "[spans]",
  "inferred_type": "Int",
  "worlds": {
    "type": "one"
  },
  "solutions": [
    []
  ],
  "constraints": [],
  "bounds": [],
  "errors": []
}
